2007-10-26  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
	(linesVisible): Deprecated,
	(shapesVisible): Likewise,
	(shapesFilled): Likewise,
	(getLinesVisible): Likewise,
	(setLinesVisible): Likewise,
	(getShapesVisible): Likewise,
	(setShapesVisible): Likewise,
	(setShapesFilled): Likewise.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java:
	Renamed XYSplineRenderer.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
	(drawPrimaryLineAsPath): Check for duplicated control points,
	(ControlPoint.equals): New method override.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(getDomainAxisIndex): Added argument check,
	(getRangeAxisIndex): Likewise.
	
2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/StandardTickUnitSource.java:
	Implemented Serializable,
	(StandardTickUnitSource): Added explicit constructor,
	(equals): New method override,
	(hashCode): Likewise.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(defaultDirectoryForSaveAs): New field,
	(ChartPanel(JFreeChart, int, int, int, int, int, int, boolean, boolean,
	boolean, boolean, boolean, boolean)): Initialise new field,
	(getDefaultDirectoryForSaveAs): New method,
	(setDefaultDirectoryForSaveAs): Likewise,
	(doSaveAs): Apply default directory.

2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>

	* experimenta/org/jfree/experimental/chart/plot/dial/*.java:
	Moved this package to org.jfree.chart.plot.dial.*,
	* experimenta/org/jfree/experimental/chart/plot/dial/junit/*.java:
	Moved this package to org.jfree.chart.plot.dial.junit.*.

2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>
